kubernetes-config/Alpha/PV_master_file_Postgres.yml



kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgres-deployment
  namespace: skillbox-alpha
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-pv-claim
          persistentVolumeClaim:
            claimName: pg-db-pvc
      containers:
        - name: postgres
          image: postgres:15.1
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-pv-claim
              mountPath: /var/lib/postgresql/data
