kubernetes-config/Alpha/AdminConsoleAll.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: microservice-admin-console
  namespace: skillbox-alpha
  labels:
    app: microservice-admin-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-admin-console
  template:
    metadata:
      labels:
        app: microservice-admin-console
    spec:
      volumes:
        - name: microservice-admin-console
          configMap:
            name: microservice-admin-console
            items:
              - key: application.yml
                path: application.yml
      containers:
        - name: app
          image: alphateam35/microservice-admin-console:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 450Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: microservice-admin-console
              mountPath: /app/config
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: microservice-admin-console
  namespace: skillbox-alpha
spec:
  selector:
    app: microservice-admin-console
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
