kubernetes-config/Alpha/AuthAll.yaml


kind: Deployment
apiVersion: apps/v1
metadata:
  name: microservice-authorization
  namespace: skillbox-alpha
  labels:
    app: microservice-authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-authorization
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: microservice-authorization
    spec:
      volumes:
        - name: microservice-authorization
          configMap:
            name: microservice-authorization
            items:
              - key: application.yml
                path: application.yml
            defaultMode: 420
      containers:
        - name: app
          image: alphateam35/microservice-authorization:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 450Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: microservice-authorization
              mountPath: /app/config





---


kind: Service
apiVersion: v1
metadata:
  name: microservice-authorization
  namespace: skillbox-alpha

spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30628
  selector:
    app: microservice-authorization
  type: NodePort
