kubernetes-config/Alpha/GeoAll.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-geo
  namespace: skillbox-alpha
  labels:
    app: microservice-geo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-geo
  template:
    metadata:
      labels:
        app: microservice-geo
        project: microservice-geo
    spec:
      containers:
      - name: microservice-geo-container
        image: alphateam35/microservice-geo:latest
        resources:
            limits:
              cpu: 300m
              memory: 450Mi
            requests:
              cpu: 200m
              memory: 256Mi 


---




apiVersion: v1
kind: Service
metadata:
  name: microservice-geo
  labels:
    env  : prod
    owner: TretyakovAS
spec:
  selector:
    app: microservice-geo    # Selecting PODS with those Labels
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 8080  # Port on POD
  type: ClusterIP
