kubernetes-config/Alpha/KafkaAll.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-statefulset
  namespace: kafka
  labels:
    app: kafka-cluster
spec:
  serviceName: kafka-svc
  replicas: 1
  selector:
    matchLabels:
      app: kafka-cluster
  template:
    metadata:
      labels:
        app: kafka-cluster
    spec:
      containers:
        - name: kafka-container
          image: 'bitnami/kafka:latest'
          ports:
            - containerPort: 9092
            - containerPort: 9093
            - containerPort: 9094
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: kafka
  labels:
    app: kafka-cluster
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
      nodePort: 30092
  selector:
    app: kafka-cluster
  type: NodePort
  
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-svc-ext
  namespace: kafka
  labels:
    app: kafka-cluster
spec:
  ports:
    - port: 9094
      protocol: TCP
      targetPort: 9094
      nodePort: 30094
  selector:
    app: kafka-cluster
  type: NodePort
