kubernetes-config/Alpha/PostgresAll.yaml



apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: skillbox-alpha
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
            - containerPort: 5432
              protocol: TCP
---



apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: skillbox-alpha
  labels:
    env  : prod
    owner: 
spec:
  selector:
    app: postgres    # Selecting PODS with those Labels
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 5432  # Port on Load Balancer
      targetPort: 5432  # Port on POD
  type: ClusterIP
