kubernetes-config/Alpha/StreamingAll.yaml


kind: Deployment
apiVersion: apps/v1
metadata:
  name: microservice-streaming
  namespace: skillbox-alpha
  labels:
    app: microservice-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-streaming
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: microservice-streaming

    spec:
      volumes:
        - name: microservice-streaming
          configMap:
            name: microservice-streaming
            items:
              - key: application.yml
                path: application.yml
            defaultMode: 420
      containers:
        - name: app
          image: alphateam35/microservice-streaming:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 450Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: microservice-streaming
              mountPath: /app/config

  
  
---



kind: Service
apiVersion: v1
metadata:
  name: microservice-streaming
  namespace: skillbox-alpha
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30855
  selector:
    app: microservice-streaming
  type: NodePort
